--- a/categories.html
+++ b/categories.html
@@ -33,7 +33,7 @@
 					<p>These categories of film projects often generate curiosity and speculation among cinephiles, as they represent glimpses into what might have been and fuel discussions about the complexities of filmmaking and the industry as a whole. Some unfinished or unreleased projects achieve cult status, generating interest and intrigue long after their initial creation.<br /><br />
 						Cancelled film projects refer to those that were in various stages of development but were halted before completion for a multitude of reasons.<br /> <br />
 						Unreleased films encompass those completed or partially completed but have yet to be shown to the public.<br /> <br />
-						Unfinished film projects are those that were abandoned during production and never completed. </p><br /><br /><a href="films_ClownCried.html">Click here for a random film!</a></p>
+						Unfinished film projects are those that were abandoned during production and never completed. <br /><br /><a href="films_ClownCried.html">Click here for a random film!</a></p>
 			<div class="column">
 				<img src="images/960w/img_categoryUnfinished.jpg" alt="Unfinished Category" title="Unfinished" >
 				<img src="images/960w/img_categoryUnfinished.jpg" alt="Unfinished Category" title="Unfinished" >
