--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 	
 	<footer>
         <h2>NeverMade     &copy; Remy R Michelin</h2>      
-		<a href=sitemap.xlm>sitemap</a> 
+		<a href=sitemap.xml>sitemap</a> 
 		<a href="facebook.com"><img id="facebook_image" src="images/icons/icon_facebook.svg" alt="Facebook"></a>
 		<a href="instagram.com"><img id="instagram_image" src="images/icons/icon_instagram.svg" alt="Instagram"></a>
 		<a href="youtube.com"><img id="youtube_image" src="images/icons/icon_youtube.svg" alt="Youtube"></a>
